@@ -4313,11 +4313,10 @@ Document* Document::parentDocument() const
 
 Document& Document::topDocument() const
 {
-    if (!m_frame)
-        return const_cast<Document&>(*this);
-    // This should always be non-null.
-    Document* mainFrameDocument = m_frame->mainFrame().document();
-    return mainFrameDocument ? *mainFrameDocument : const_cast<Document&>(*this);
+    Document* document = const_cast<Document*>(this);
+    while (Element* element = document->ownerElement())
+        document = &element->document();
+    return *document;
 }
 
 PassRefPtr<Attr> Document::createAttribute(const String& name, ExceptionCode& ec)
